@@ -1,3 +1,7 @@
+Wed, 13 Dec 2006 01:58:25 +0100 <thp@perli.net>
+        * src/gpodder/gpodder.py: New-style channel editor dialog (code)
+        * data/gpodder.glade: New-style channel editor dialog
+
 Wed, 13 Dec 2006 01:28:11 +0100 <thp@perli.net>
         * src/gpodder/libpodcasts.py: Bugfix for newest_pubdate_downloaded
 
